# ImageOnC

./: CMakeLists.txt  Fit.cpp  README.md  Train.cpp  encode.txt  main.cpp  param.txt  paramLetters.txt
include/: Config.h  FileProcess.h  ModelTrans.h  Net.h  Process.h  SaveLoad.h
